[project]
name = "nexus-integration"
version = "0.1.0"
description = ""
authors = [
    {name = "ricardo.schoettler",email = "ricardo.schoettler@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pymongo (>=4.16.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
