[project]
name = "nexus-integration"
version = "0.1.0"
description = ""
authors = [
    {name = "ricardo.schoettler", email = "ricardo.schoettler@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5,<3.0.0",
    "pymongo>=4.16.0,<5.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.128.0,<0.129.0",
    "uvicorn[standard]>=0.34.0,<0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "httpx>=0.28.1",
]

[tool.uv]
package = false
